objects/ASI_CRM_Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Consider_Prompt_Payment__c</fullName>
        <formula>IF(ISBLANK(ASI_CRM_Account_Number__c),
  False,
  IF(
    OR(
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3010&apos;,
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3020&apos;,
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3030&apos;
    ),
    TRUE,
    FALSE
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct# Consider Prompt Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>ASI_CRM_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PP_With_Key_SB__c</fullName>
        <formula>AND (
 ASI_CRM_Consider_Prompt_Payment__c,
 ASI_CRM_Sub_brand__r.ASI_CRM_Allow_Prompt_Payment__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prompt Pymt With Key SB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prompt_Payment_Ratio__c</fullName>
        <formula>IF( 
  AND(
    ASI_CRM_Consider_Prompt_Payment__c ,
    ASI_CRM_Sub_brand__r.ASI_CRM_Allow_Prompt_Payment__c
  ),
  ASI_CRM_Amount__c / ASI_CRM_Invoice__r.ASI_CRM_Base_Amount_For_Prompt_Payment__c,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prompt Payment Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_Code__c</fullName>
        <formula>IF(ISBLANK(ASI_CRM_Account_Number__c),
  &apos;&apos;,
  IF(
    OR(
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3010&apos;,
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3020&apos;,
      RIGHT(ASI_CRM_Account_Number__c,4)=&apos;3030&apos;
    ),
    MID(ASI_CRM_Account_Number__c , 6, 3),
    &apos;&apos;
  )
)</formula>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INVL-{000000}</displayFormat>
        <label>Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_CRM_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>SG CRM Invoice Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>